force-app/main/default/objects/OpptyStatusHistory__c/OpptyStatusHistory__c.object-meta.xml
<CustomObject>
    <label>Oppty Status History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oppty Status Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>