force-app/main/default/objects/OpptyStatusHistory__c/fields/DaysInStage__c.field-meta.xml
<CustomField>
    <fullName>DaysInStage__c</fullName>
    <formula>(IF( ISNULL(EndDate__c), NOW(), EndDate__c ) - StartDate__c )</formula>
    <inlineHelpText>The number of days in the current stage</inlineHelpText>
    <label>Days In Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>