force-app/main/default/objects/OpptyStatusHistory__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date/time this status changed</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>