force-app/main/default/objects/OpptyStatusHistory__c/fields/PreviousStatus__c.field-meta.xml
<CustomField>
    <fullName>PreviousStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The previous Opportunity Status History record.</inlineHelpText>
    <label>Previous Status History</label>
    <referenceTo>OpptyStatusHistory__c</referenceTo>
    <relationshipLabel>Oppty Status Histories</relationshipLabel>
    <relationshipName>OpptyStatusHistories</relationshipName>
    <type>Lookup</type>
</CustomField>