force-app/main/default/objects/OpptyStatusHistory__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <inlineHelpText>The opportunity status</inlineHelpText>
    <label>Stage Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Future Renewal</fullName>
            </value>
            <value>
                <fullName>Needs Analysis</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Proposal Presented</fullName>
            </value>
            <value>
                <fullName>Negotiation/Discussion</fullName>
            </value>
            <value>
                <fullName>Pre-Qualifying</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Gained Access</fullName>
            </value>
            <value>
                <fullName>IEUP</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Profile Scheduled</fullName>
            </value>
            <value>
                <fullName>1st Presentation</fullName>
            </value>
            <value>
                <fullName>Profile Completed</fullName>
            </value>
            <value>
                <fullName>Partnership Presentation Scheduled</fullName>
            </value>
            <value>
                <fullName>Executive Overview</fullName>
            </value>
            <value>
                <fullName>Business Analysis</fullName>
            </value>
            <value>
                <fullName>Actively Engaged in Sales Process</fullName>
            </value>
            <value>
                <fullName>Partnership Presentation Completed</fullName>
            </value>
            <value>
                <fullName>Demo(s)</fullName>
            </value>
            <value>
                <fullName>Demo Scheduled</fullName>
            </value>
            <value>
                <fullName>Demo Completed</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Verbal Commit - Pick Up Discussed</fullName>
            </value>
            <value>
                <fullName>Verbal Commit</fullName>
            </value>
            <value>
                <fullName>Picked Up</fullName>
            </value>
            <value>
                <fullName>Proposal / Close</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Solution/Presentation (Demo)</fullName>
            </value>
            <value>
                <fullName>Decision/Pricing</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>