force-app/main/default/objects/OpptyStatusHistory__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date/time this status was set</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>