force-app/main/default/objects/OpptyStatusHistory__c/fields/StatusIsClosed__c.field-meta.xml
<CustomField>
    <fullName>StatusIsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this status close the opportunity?</inlineHelpText>
    <label>Status Is Closed</label>
    <type>Checkbox</type>
</CustomField>