force-app/main/default/objects/OpptyStatusHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>StageName__c</columns>
    <columns>CurrentStage__c</columns>
    <columns>OppIsClosed__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>MinutesInStage__c</columns>
    <columns>HoursInStage__c</columns>
    <columns>DaysInStage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>