force-app/main/default/objects/OpptyStatusHistory__c/listViews/Updated_Yesterday.listView-meta.xml
<ListView>
    <fullName>Updated_Yesterday</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>StageName__c</columns>
    <columns>CurrentStage__c</columns>
    <columns>PreviousStatus__c</columns>
    <columns>OppIsClosed__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>MinutesInStage__c</columns>
    <columns>HoursInStage__c</columns>
    <columns>DaysInStage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Updated Yesterday</label>
</ListView>